# q3dviewer

./: .gitignore  LICENSE  QUICK_UPLOAD.md  README.md  pyproject.toml  setup.py
fast_viewer/: __init__.py  basic_window.py  cloud_viewer.py  example_viewer.py  gaussian_viewer.py  mesh_viewer.py  pointcloud2_tools.py  ros_viewer.py  utils.py
fast_viewer/custom_items/: __init__.py  axis_item.py  camera_frame_item.py  cloud_io_item.py  cloud_item.py  gaussian_item.py  grid_item.py  image_item.py
q3dviewer/:  __init__.py  GLViewWidget.py  __init__.py  base_glwidget.py  base_item.py  base_viewer.py  basic_viewer.py  basic_window.py  cloud_io.py  cloud_viewer.py  convert_ros_msg.py  cuda_sort.py  example_viewer.py  gau_io.py  gaussian_viewer.py  gl_utils.py  glv_widget.py  glwidget.py  mesh_viewer.py  point_sort.py  range_slider.py  ros_viewer.py  utils.py  viewer.py  viewer_widget.py
q3dviewer/Qt/: __init__.py
q3dviewer/custom_items/: __init__.py  axis_item.py  camera_frame_item.py  cloud_io_item.py  cloud_item.py  cloud_sort_item.py  frame_item.py  gaussian_item.py  grid_item.py  image_item.py  line_item.py  mesh_item.py  satellite_map_item.py  static_mesh_item.py  text3d_item.py  text_item.py  trajectory_item.py
q3dviewer/libs/: cuda_point_sort.cu
q3dviewer/shaders/: cloud_frag.glsl  cloud_vert.glsl  downsample_comp.glsl  gau_frag.glsl  gau_prep.glsl  gau_vert.glsl  mesh_frag.glsl  mesh_geom.glsl  mesh_vert.glsl  sort_by_key.glsl  triangle_mesh_geom.glsl  triangle_mesh_vert.glsl
q3dviewer/test/: test_interpolation.py  test_rendering.py
q3dviewer/tools/: cinematographer.py  cloud_movie_maker.py  cloud_viewer.py  compare_viewer.py  example_viewer.py  film_maker.py  gaussian_viewer.py  lidar_calib.py  lidar_cam_calib.py  lidar_cam_manual_calib.py  manual_lidar_cam_calib.py  matching_cloud.py  mesh_viewer.py  ros_viewer.py
q3dviewer/utils/: __init__.py  cloud_io.py  cloud_registration.py  convert_ros_msg.py  gl_helper.py  helpers.py  maths.py  range_slider.py
