[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q3dviewer"
version = "1.2.7"
authors = [
    {name = "Liu Yang", email = "liu.yang@jp.panasonic.com"}
]
description = "A library designed for quickly deploying a 3D viewer."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyside6",
    "PyOpenGL",
    "meshio",
    "pypcd4",
    "pye57",
    "laspy",
    "imageio",
    "imageio[ffmpeg]",
    "matplotlib",
    "pyproj",
]

[project.urls]
Homepage = "https://github.com/scomup/q3dviewer"

[project.scripts]
cloud_viewer = "q3dviewer.tools.cloud_viewer:main"
ros_viewer = "q3dviewer.tools.ros_viewer:main"
mesh_viewer = "q3dviewer.tools.mesh_viewer:main"
gaussian_viewer = "q3dviewer.tools.gaussian_viewer:main"
lidar_cam_calib = "q3dviewer.tools.lidar_cam_calib:main"
lidar_calib = "q3dviewer.tools.lidar_calib:main"
film_maker = "q3dviewer.tools.film_maker:main"
matching_cloud = "q3dviewer.tools.matching_cloud:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
q3dviewer = ["shaders/*.glsl"]
